# stm32_blue_pill_rs

./: Cargo.toml  Embed.toml  README.md  openocd.cfg
src/: main.rs
