[package]
authors = ["Ivor Wanders"]
edition = "2021"
readme = "README.md"
name = "blink"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"

nb = "1"

cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
